[gd_scene load_steps=6 format=3 uid="uid://knfvtmq4hu7k"]

[ext_resource type="Script" uid="uid://b8tf2qulp165a" path="res://Script/script_base_level.gd" id="1_2026j"]
[ext_resource type="Texture2D" uid="uid://bynr4ck3a400r" path="res://Art/Avatar/artBackGroundWaterLine.jpg" id="1_pafmu"]
[ext_resource type="PackedScene" uid="uid://m11wmhshgt5k" path="res://Scenes/playerShip.tscn" id="3_nrh03"]
[ext_resource type="PackedScene" uid="uid://chq4qwawm7168" path="res://Scenes/gameover_canvas_layer.tscn" id="4_j6cuo"]
[ext_resource type="PackedScene" uid="uid://csd4bul22od8h" path="res://Scenes/panelPuse.tscn" id="5_nrh03"]

[node name="LevelScene1" type="Node2D"]
script = ExtResource("1_2026j")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(959.5, 540)
scale = Vector2(3.13235, 2.64706)
texture = ExtResource("1_pafmu")

[node name="ShipCharacterNode" parent="." instance=ExtResource("3_nrh03")]
position = Vector2(912, 375)

[node name="HUDCanvasLayer" type="CanvasLayer" parent="."]

[node name="ShipHPProgressBar" type="ProgressBar" parent="HUDCanvasLayer"]
offset_left = 2.0
offset_top = 2.0
offset_right = 293.0
offset_bottom = 38.0

[node name="ScoreLabel" type="Label" parent="HUDCanvasLayer"]
offset_left = 902.0
offset_top = 4.0
offset_right = 1033.0
offset_bottom = 33.0

[node name="GameOverUI" parent="." instance=ExtResource("4_j6cuo")]

[node name="PanelPuse" parent="." instance=ExtResource("5_nrh03")]
